--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --cwd client build",
+    "build": "node client/node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
