--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "node client/node_modules/.bin/react-scripts build",
+    "build": "node ./node_modules/react-scripts/bin/react-scripts.js --cwd client build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
